--- a/css/iniciar.css
+++ b/css/iniciar.css
@@ -11,12 +11,12 @@
     box-shadow: 5px 5px 25px #222 inset;
     /* Border */
     border:black solid 1px;
-    border-radius: 10%;
+    
     /* Padding */
-    padding-top: 4%;
-    padding-bottom: 5%;
-    padding-left: 2%;
-    padding-right: 2%;
+    padding-top: 5%;
+    padding-bottom: 10%;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 h2{
@@ -35,32 +35,42 @@ p{
 
 .boton{
     height: 20%;
-    font-size: 1.2em;
+    font-size: 1em;
     font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
     background-color: #253243;
-    border: 2px solid black;
-    color: #c98f40;
+    border: 1px solid black;
+    border-radius: 1em;
+    color: white;
+}
+.boton:hover{
+    opacity: 90%;
 }
 
-.formulario{
-    background-color: white;
-    border-radius: 5%;
-
-}
 a{
     text-decoration: none;
     color: #253243;
 }
 
-i{
-    border: none;
+.formulario{
+    width: 100%;
+    background-color: white;
+    border-radius: 1em;
 }
 
-.fotoInicio{
-    border-radius: 10%;
-    border: black 1px solid;
+.botonMostrar{
+    border: none;
+    background-color: transparent;
 }
+
+.inputFormulario{
+    margin-left: 5%;
+}
+
+.input2{
+    width: 100%;
+}
+    
+
 
 /* JAVASCRIPT FORMULARIO */
 
@@ -75,3 +85,4 @@ i{
     background: #FF6633;
     width: 325px;
 }
+
