Añadimos base de datos en servicios

--- a/css/servicios.css
+++ b/css/servicios.css
@@ -18,7 +18,8 @@
 	vertical-align: top;
 	background: #fff;
 	padding: 10px 0 20px 0;
-	margin-right: 20px;
+	margin-right: 2%;
+    margin-left: 2%;
 	border-radius: 10px;
     text-align: center;
 }
