--- a/css/gestion.css
+++ b/css/gestion.css
@@ -1,14 +1,14 @@
 .tablon {
-    width: 70em;
+    width: auto;
     height: auto;
     background-color: white;
     border: 0.1em solid rgb(180, 180, 180);
-    margin: 3em 0 0 10em;
     padding: 2em;
 }
 
 .tablon h2 {
-    font-size: xx-large;
+    font-size: 150%;
+	font-weight: bold;
 }
 
 
@@ -20,9 +20,9 @@
     border-radius: 2em;
     cursor: pointer;
     font-size: 1em;
-    margin-top: 5%;
+    margin-top: 12%;
     color: white;
-    border: 0.2em solid #393939;
+    border: 0.125em solid #393939;
     text-decoration: none;
 }
 
@@ -41,14 +41,13 @@ em {
 }
 
 table {
+	margin-top: 2%;
 	background: #f5f5f5;
 	border-collapse: separate;
 	box-shadow: inset 0 1px 0 #fff;
 	font-size: 12px;
 	line-height: 24px;
-	margin: 30px auto;
-	text-align: left;
-	width: 800px;
+	width: 100%;
 }	
 
 th {
@@ -60,8 +59,7 @@ th {
 	box-shadow: inset 0 1px 0 #999;
 	color: #fff;
     font-weight: bold;
-	padding: 10px 15px;
-	position: relative;
+	padding: 0.8em 1em;
 	text-shadow: 0 1px 0 #000;	
 }
 
@@ -70,9 +68,6 @@ th:after {
 	content: '';
 	display: block;
 	height: 25%;
-	left: 0;
-	margin: 1px 0 0 0;
-	position: absolute;
 	top: 25%;
 	width: 100%;
 }
@@ -91,8 +86,7 @@ td {
 	border-left: 1px solid #e8e8e8;
 	border-top: 1px solid #fff;
 	border-bottom: 1px solid #e8e8e8;
-	padding: 10px 15px;
-	position: relative;
+	padding: 0.8em 1em;
 	transition: all 300ms;
 }
 
