--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,11 @@ h2, .centrar{
     margin-left: 0%;
 }
 
+.hr90{
+    max-width: 80%;
+    margin-left: 5%;
+}
+
 .hr80{
     max-width: 68%;
     margin-left: 16%;
@@ -83,4 +88,13 @@ p a{
 
 textarea{
     width: 40.7%;
+}
+
+/* Mis Datos */
+.misDatosBloque{
+    border: #253243 solid 3px;
+    padding: 2%;
+}
+.inputContra{
+    width: 65%;
 }
