menu adaptado, ofertas añadidas, sesion hecha, datos del usuario adaptables

--- a/css/index.css
+++ b/css/index.css
@@ -3,15 +3,8 @@ h2, .centrar{
     font-weight: bold;
 }
 
-
-.servicio{
-    margin-left: 27%;
-}
-
-.trabajadores{
-    margin-top: 1.5%;
-    text-align: center;
-    margin-bottom: 1.5%;
+.introduccion1{
+    font-size: 18px;
 }
 
 .hr100{
