--- a/css/formularioGestion.css
+++ b/css/formularioGestion.css
@@ -1,24 +1,28 @@
-body{
+body {
     text-align: center;
 }
 
-.guardar{
-    background-color: transparent;
-    border: solid 1px #6f7484;
-    border-radius: 10%;
-}
-.guardar:hover{
-    background-color: transparent;
-    border: solid 1px #f99804;
-    border-radius: 10%;
-    color: #f99804;
+.guardar {
+    background-color: #c98f40;
+    padding: 2%;
+    border: solid 2px #fff;
+    border-radius: 2%;
+    width: 100%;
 }
 
-.eventoNoticia{
+.guardar:hover {
+    background-color: #e3a248;
+    padding: 2%;
+    border: solid 2px #fff;
+    border-radius: 2%;
+    width: 100%;
+}
+
+.eventoNoticia {
     visibility: hidden;
 }
 
-article{
+article {
     text-align: center;
 }
 
@@ -35,34 +39,46 @@ td {
 }
 
 /*Citas*/
-.containerFormularioFirst{
-    background: url(https://jackrugile.com/images/misc/noise-diagonal.png), linear-gradient(white,rgb(221, 221, 221));
-	border-left: 1px solid #253243;
-	border-right: 1px solid #253243;
-	border-top: 1px solid #253243;
-	border-bottom: 1px solid #253243;
+
+.containerFormulario{
+    background-color: #253243;
+    padding-bottom: 10%;
+}
+
+.containerFormularioFirst {
+    background-color: #253243;
     border-top-left-radius: 2%;
     border-top-right-radius: 2%;
-	color: #000;
-	padding: 0.8em 1em;
+    color: #fff;
+    padding: 0.8em 1em;
 }
 
-.containerFormularioMiddle{
-    background: url(https://jackrugile.com/images/misc/noise-diagonal.png), linear-gradient(rgb(221, 221, 221),white);
-	border-left: 1px solid #253243;
-	border-right: 1px solid #253243;
-	color: #000;
-	padding: 0.8em 1em;
+.containerFormularioMiddle {
+    background-color: #253243;
+    color: #fff;
+    padding: 0.8em 1em;
 }
 
-.containerFormularioLast{
-    background: url(https://jackrugile.com/images/misc/noise-diagonal.png), linear-gradient(white,rgb(221, 221, 221));
-	border-left: 1px solid #253243;
-    border-top: 1px solid #253243;
-	border-right: 1px solid #253243;
-	border-bottom: 1px solid #253243;
+.containerFormularioLast {
+    background-color: #253243;
     border-bottom-left-radius: 2%;
     border-bottom-right-radius: 2%;
-	color: #000;
-	padding: 0.8em 1em;
+    color: #fff;
+    padding: 0.8em 1em;
+}
+.serviciosForm{
+    text-align: center;
+    width: 80%;
+    height: 50%;
+}
+.subtitu{
+    width: 100%;
+    text-align: center;
+    color: #fff;
+}
+.subtitu2{
+    width: 60%;
+    margin-left: 20%;
+    text-align: center;
+    color: #fff;
 }
